# WaveSync-RS

./: .gitignore  Cargo.toml  build.rs
shader/: colored_line.wgsl  decay.wgsl  instanced_bars.wgsl  instanced_line_fill.wgsl  line.wgsl  spectrogram.wgsl  triangle.wgsl  vectorscope.wgsl  vectorscope_blit.wgsl  vectorscope_lines.wgsl
src/: app.rs  egui_tools.rs  main.rs  media.rs  persistance.rs  themes.rs  wavesync.rs
src/sound/: audio_backend.rs  audio_service.rs  audio_system.rs  capture_source.rs  cpal_audio_backend.rs  dummy_audio_backend.rs  mod.rs  windowing.rs
src/sound/loudness/: mod.rs  rms.rs
src/sound/smoothing/: exponential_falloff_smoother.rs  mod.rs  multiplicative_smoother.rs
src/ui/: gradient.rs  loudness_indicator.rs  mod.rs  plot.rs
src/ui/visualizer/: extended_waveform.rs  mod.rs  spectrogram.rs  spectrum.rs  vectorscope.rs  visualizer_trait.rs  visualizer_widget.rs  waveform.rs
