[package]
name = "wavesync-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32.3",features = ["default", "wgpu"] }
egui_extras = "0.32.3"
egui-wgpu = "0.32.3"

env_logger = { version = "0.11.8", default-features = false, features = [
    "auto-color",
    "humantime",
] }
type-map = "0.5.1"