[package]
name = "wavesync-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32.3",features = ["default", "wgpu", "persistence"] }
egui_extras = "0.32.3"
egui-wgpu = "0.32.3"
egui = "0.32.3"
egui-winit = "0.32.3"
winit = "0.30.12"
catppuccin-egui = { version = "5.6.0", default-features = false, features = ["egui32"] }

env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "humantime"] }
bytemuck = "1.23.2"
cpal = "0.16.0"
circular-buffer = "1.2.0"
rustfft = "6.4.1"
log = "0.4.28"
image = "0.25.8"
egui-phosphor = "0.10.0"
serde = { version = "1.0.225", features = ["derive"] }
pollster = "0.4.0"

[profile.dev.package.rustfft]
opt-level = 3
codegen-units = 1
debug = false
